Hit the categoies endpoint and display them in console

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "id": "cloudatlas-o-am",
-  "name": "Cloud Atlas Amazing Marvin Obsidian",
+  "name": "Amazing Marvin (Cloud Atlas)",
   "version": "0.0.1",
   "minAppVersion": "1.4.16",
   "description": "Interoperability between Obsidian and Amazing Marvin",
