--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "id": "cloudatlas-o-am",
-  "name": "Amazing Marvin (Cloud Atlas)",
+  "name": "Amazing Marvin",
   "version": "0.1.1",
   "minAppVersion": "1.4.16",
-  "description": "Interoperability between Obsidian and Amazing Marvin",
+  "description": "Integration with Amazing Marvin",
   "author": "Cloud Atlas",
   "authorUrl": "https://cloud-atlas.ai",
   "isDesktopOnly": false
