Add dist/main.js to release artifacts

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,4 +43,5 @@ jobs:
             --title="$tag" \
             --draft \
             dist/main-debug.js \
+            dist/main.js \
             ${{ env.PLUGIN_NAME }}.zip
