update BRAT manifest to latest release

--- a/manifest-beta.json
+++ b/manifest-beta.json
@@ -1,7 +1,7 @@
 {
   "id": "cloudatlas-o-am",
   "name": "Amazing Marvin",
-  "version": "0.4.2b",
+  "version": "0.5.0",
   "minAppVersion": "1.4.16",
   "description": "Integration with Amazing Marvin",
   "author": "Cloud Atlas",
