add manifest.json to release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,4 +44,5 @@ jobs:
             --draft \
             dist/main-debug.js \
             dist/main.js \
+            dist/mainifest.json \
             ${{ env.PLUGIN_NAME }}.zip
