--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,5 +44,5 @@ jobs:
             --draft \
             dist/main-debug.js \
             dist/main.js \
-            dist/mainifest.json \
+            dist/manifest.json \
             ${{ env.PLUGIN_NAME }}.zip
