--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "id": "cloudatlas-o-am",
-  "name": "Amazing Marvin",
-  "version": "0.9.0",
+  "name": "Amazing Marvin by Cloud Atlas",
+  "version": "0.9.1",
   "minAppVersion": "1.4.16",
   "description": "Integration with Amazing Marvin",
   "author": "Cloud Atlas",
