--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,6 +42,7 @@ jobs:
         gh release create "$tag" \
             --title="$tag" \
             --draft \
+            dist/styles.css \
             dist/main-debug.js \
             dist/main.js \
             dist/manifest.json \
