--- a/manifest-beta.json
+++ b/manifest-beta.json
@@ -1,7 +1,7 @@
 {
   "id": "cloudatlas-o-am",
-  "name": "Amazing Marvin",
-  "version": "0.9.0",
+  "name": "Amazing Marvin Integration",
+  "version": "0.9.9",
   "minAppVersion": "1.4.16",
   "description": "Integration with Amazing Marvin",
   "author": "Cloud Atlas",
