--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cloud-atlas",
-  "version": "0.9.2",
+  "name": "cloud-atlas-am",
+  "version": "0.9.9",
   "description": "Interoperability between Obsidian and Amazing Marvin",
   "main": "dist/main.js",
   "scripts": {
